--- a/test/units/requirements.txt
+++ b/test/units/requirements.txt
@@ -40,3 +40,6 @@ httmock
 
 # requirment for kubevirt modules
 openshift ; python_version >= '2.7'
+
+# requirement for active_directory inventory plugin
+ldap3
